--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css"
       rel="stylesheet"
     />
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
     <script src="viewManager.js"></script>
+    <style>
+      code {
+        color: #f8f8f2;
+        background-color: #000000;
+        padding: 0.2em 0.4em;
+        border-radius: 0.3em;
+      }
+      pre {
+        background: #000000;
+        border: 1px solid #ddd;
+        border-left: 3px solid #f36d33;
+        color: #ffffff;
+        page-break-inside: avoid;
+        font-family: monospace;
+        font-size: 15px;
+        line-height: 1.6;
+        margin-bottom: 1.6em;
+        max-width: 100%;
+        overflow: auto;
+        padding: 1em 1.5em;
+        display: block;
+        word-wrap: break-word;
+      }
+    </style>
   </head>
   <body class="bg-gray-900 text-white font-sans">
     <div class="container mx-auto p-4 h-screen">
